; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-cns3xxx/extr_pm.c_cns3xxx_pwr_clk_dis.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-cns3xxx/extr_pm.c_cns3xxx_pwr_clk_dis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PM_CLK_GATE_REG = common dso_local global i32 0, align 4
@PM_CLK_GATE_REG_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cns3xxx_pwr_clk_dis(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @PM_CLK_GATE_REG, align 4
  %5 = call i32 @__raw_readl(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @PM_CLK_GATE_REG_MASK, align 4
  %8 = and i32 %6, %7
  %9 = xor i32 %8, -1
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, %9
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @PM_CLK_GATE_REG, align 4
  %14 = call i32 @__raw_writel(i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @__raw_readl(i32) #1

declare dso_local i32 @__raw_writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
